# leftPadDeez

./: .gitignore  16.Dockerfile  18.Dockerfile  18.csv  Cargo.toml  Dockerfile  README.md  ab  data-process  memory_test  node.csv  order  package-lock.json  package.json  run  so.csv  tester
data/: Boody_1000_1000  Boody_500_1000  Boody_500_750  buffer_1000_1000  buffer_1000_250  buffer_1000_500  buffer_1000_750  buffer_500_1000  buffer_500_250  buffer_500_500  buffer_500_750  buffer_50_1000  buffer_50_250  buffer_50_500  buffer_50_750  leftPadEmber_1000_1000  leftPadEmber_1000_250  leftPadEmber_1000_500  leftPadEmber_1000_750  leftPadEmber_500_1000  leftPadEmber_500_250  leftPadEmber_500_500  leftPadEmber_500_750  leftPadEmber_50_1000  leftPadEmber_50_250  leftPadEmber_50_500  leftPadEmber_50_750  leftPadTravvy_1000_1000  leftPadTravvy_1000_250  leftPadTravvy_1000_500  leftPadTravvy_1000_750  leftPadTravvy_500_1000  leftPadTravvy_500_250  leftPadTravvy_500_500  leftPadTravvy_500_750  leftPadTravvy_50_1000  leftPadTravvy_50_250  leftPadTravvy_50_500  leftPadTravvy_50_750  leftPad_1000_1000  (+78 more)
data18/: buffer_10000_100  buffer_10000_1000  buffer_10000_2000  buffer_10000_250  buffer_10000_50  buffer_10000_500  buffer_10000_650  buffer_10000_750  buffer_10000_850  buffer_1000_100  buffer_1000_1000  buffer_1000_2000  buffer_1000_250  buffer_1000_50  buffer_1000_500  buffer_1000_650  buffer_1000_750  buffer_1000_850  buffer_2500_100  buffer_2500_1000  buffer_2500_2000  buffer_2500_250  buffer_2500_50  buffer_2500_500  buffer_2500_650  buffer_2500_750  buffer_2500_850  (+297 more)
(+387 files in other folders)
