[package]
name = "leftPadDeez"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bytes = "1.4.0"
clap = { version = "4.2.7", features = ["derive"] }
futures = "0.3.28"
http-body-util = "0.1.0-rc.2"
hyper = { version = "0.14.26", features = ["http1", "client", "stream", "tcp", "full"] }
reqwest = "0.11.17"
tokio = { version = "1.28.0", features = ["full"] }
url = "2.3.1"
